# NovaMb

./: AGENTS.md  CMakeLists.txt  README.md  metadata.json  package-lock.json  package.json
.github/workflows/: main.yml  vst3-build.yml
Source/: MultibandEngine.cpp  MultibandEngine.h  PluginProcessor.cpp  PluginProcessor.h
src/: App.tsx  index.css  types.ts
src/components/: SpectralDisplay.tsx
src/services/: aiAdvisor.ts  audioEngine.ts
